--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Island Reise-Journal",
   "short_name": "Reise-Journal",
   "description": "Dein persönliches Reise-Rätsel",
-  "start_url": "/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#667eea",
